--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "apollo-server-express": "^3.8.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1"
+  },
+  "engines": {
+    "node": "16.15.1"
   }
 }
